A bird does not sing because it has an answer. It sings because it has a song.